--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,7 @@
         // "useDefineForClassFields": true,                  /* Emit ECMAScript-standard-compliant class fields. */
         // "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
         /* Modules */
-        "module": "commonjs", /* Specify what module code is generated. */
+        "module": "preserve", /* Specify what module code is generated. */
         // "rootDir": "./",                                  /* Specify the root folder within your source files. */
         // "moduleResolution": "node10",                     /* Specify how TypeScript looks up a file from a given module specifier. */
         "baseUrl": "./", /* Specify the base directory to resolve non-relative module names. */
@@ -36,7 +36,10 @@
                 "src/*"
             ],
             "@/schemas/*": [
-                "./spacebar_server/src/schemas/*"
+                "./spacebar_server/dist/schemas/*"
+            ],
+            "@/entities/*": [
+                "./spacebar_server/src/entities/*"
             ],
             "@core": [
                 "src/core/package/core.node"
@@ -124,5 +127,6 @@
         /* Completeness */
         // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
         "skipLibCheck": true /* Skip type checking all .d.ts files. */
-    }
+    },
+    "exclude": ["./spacebar_server", "./src/lib"]
 }
