--- a/package.json
+++ b/package.json
@@ -41,11 +41,12 @@
         "wait-on": "^9.0.4"
     },
     "dependencies": {
-        "normalize.css": "^8.0.1",
-        "preact": "^10.28.4",
         "@xstate/store": "^3.15.0",
         "@xstate/store-react": "^1.0.1",
         "i18next": "^25.8.13",
+        "normalize.css": "^8.0.1",
+        "preact": "^10.28.4",
+        "react-icons": "^5.5.0",
         "react-spinners": "^0.17.0"
     }
 }
