--- a/package.json
+++ b/package.json
@@ -41,12 +41,15 @@
         "wait-on": "^9.0.4"
     },
     "dependencies": {
+        "@fontsource-variable/exo-2": "^5.2.8",
         "@xstate/store": "^3.15.0",
         "@xstate/store-react": "^1.0.1",
+        "highlight.js": "^11.11.1",
         "i18next": "^25.8.13",
         "normalize.css": "^8.0.1",
         "preact": "^10.28.4",
         "react-icons": "^5.5.0",
+        "react-markdown": "^10.1.0",
         "react-spinners": "^0.17.0"
     }
 }
